Table produksi_pilih_veneer{
    id bigint [pk]
    tanggal_produksi date
    kendala text
    created_at timestamp
    updated_at timestamp
}

Table pegawai_pilih_veneer{
    id bigint [pk]
    id_produksi_pilih_veener bigint [ref: > produksi_pilih_veneer.id]
    id_pegawai bigint
    masuk time
    pulang time
    tugas varchar
    ijin varchar 
    ket text
    created_at timestamp
    updated_at timestamp
}

Table modal_pilih_veneer{
    id bigint [pk]
    id_produksi_pilih_veener bigint [ref: > produksi_pilih_veneer.id]
    id_ukuran bigint
    id_jenis_kayu bigint
    kw varchar 
    jumlah int
    no_palet int
    created_at timestamp
    updated_at timestamp
}

Table hasil_pilih_veneer{
    id bigint [pk]
    id_produksi_pilih_veener bigint [ref: > produksi_pilih_veneer.id]
    id_modal_pilih_veener bigint [ref: > modal_pilih_veneer.id]
    kw varchar
    jumlah int
    no_palet int
    created_at timestamp
    updated_at timestamp
}

Table validasi_pilih_veneer{
    id bigint [pk]
    id_produksi_pilih_veener bigint [ref: > produksi_pilih_veneer.id]
    role varchar
    status varchar
    created_at timestamp
    updated_at timestamp
}